--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ notifications:
 #script:
 #  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 #  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("FooBar"); Pkg.test("FooBar"; coverage=true)'
+after_success:
+- julia -e 'cd(Pkg.dir("FooBar")); Pkg.add("Coverage"); using Coverage; >Coveralls.submit(Coveralls.process_folder())'
