--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ notifications:
 #  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 #  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("FooBar"); Pkg.test("FooBar"; coverage=true)'
 after_success:
-- julia -e 'cd(Pkg.dir("FooBar")); Pkg.add("Coverage"); using Coverage; >Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'cd(Pkg.dir("FooBar.jl")); Pkg.add("Coverage"); using Coverage; >Coveralls.submit(Coveralls.process_folder())'
