--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ julia:
 notifications:
   email: false
 # uncomment the following lines to override the default test script
-#script:
-#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("FooBar"); Pkg.test("FooBar"; coverage=true)'
+script:
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("FooBar"); Pkg.test("FooBar"; coverage=true)'
 after_success:
   - julia -e 'cd(Pkg.dir("FooBar.jl")); Pkg.add("Coverage"); using Coverage; >Coveralls.submit(Coveralls.process_folder())'
