--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,14 @@
 language: julia
 os:
   - linux
-  - osx
 julia:
   - release
   - nightly
 notifications:
   email: false
-# uncomment the following lines to override the default test script
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("FooBar")'
+  - julia -e 'Pkg.init(); Pkg.clone(pwd()); Pkg.build("FooBar"); Pkg.test("FooBar"; coverage=true)'
   - julia --code-coverage test/runtests.jl
-  - ls -al test
 after_success:
-  - julia -e 'cd(Pkg.dir("FooBar"));run(`ls -al src test`); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
-
+ - julia -e 'cd(Pkg.dir("FooBar")); run(`ls -al src test`); Pkg.add("Coverage"); using Coverage; a = Coveralls.process_folder(); println(a); Coveralls.submit(Coveralls.process_folder())'
