--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ script:
   - julia -e 'Pkg.init(); Pkg.clone(pwd()); Pkg.build("FooBar"); Pkg.test("FooBar"; coverage=true)'
   - julia --code-coverage test/runtests.jl
 after_success:
- - julia -e 'cd(Pkg.dir("FooBar")); run(`ls -al src test`); Pkg.add("Coverage"); using Coverage; a = Coveralls.process_folder(); println(a); Coveralls.submit(Coveralls.process_folder())'
+ - julia -e 'cd(Pkg.dir("FooBar")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
